// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataCollectorsCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="dataCollector-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r2:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Data collectors
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Data collectors title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Data collectors title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    insights-client
                  </span>
                </dt>
                <dd
                  aria-label="insights-client value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="insights-client value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    subscription-manager
                  </span>
                </dt>
                <dd
                  aria-label="subscription-manager value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="subscription-manager value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Satellite
                  </span>
                </dt>
                <dd
                  aria-label="Satellite value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Satellite value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Discovery
                  </span>
                </dt>
                <dd
                  aria-label="Discovery value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Discovery value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataCollectorsCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="dataCollector-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r5:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Data collectors
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Data collectors title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Data collectors title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    insights-client
                  </span>
                </dt>
                <dd
                  aria-label="insights-client value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="insights-client value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-:r6:"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-:r7:"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status:
                        <span
                          class="pf-v6-c-icon"
                          style="margin-left: 4px; margin-right: 4px;"
                        >
                          <span
                            class="pf-v6-c-icon__content pf-m-success"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 512 512"
                              >
                                <path
                                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                        Active
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-:r8:"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Insights Client ID: 
                        <div
                          class="pf-v6-c-clipboard-copy pf-m-inline"
                          data-ouia-component-type="PF6/ClipboardCopy"
                          data-ouia-safe="true"
                        >
                          <span
                            class="pf-v6-c-clipboard-copy__text"
                            id="text-input-:r9:"
                          >
                            1234
                          </span>
                          <span
                            class="pf-v6-c-clipboard-copy__actions"
                          >
                            <span
                              class="pf-v6-c-clipboard-copy__actions-item"
                            >
                              <button
                                aria-label="Copy to clipboard"
                                class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                                data-ouia-component-id="OUIA-Generated-Button-plain-:rb:"
                                data-ouia-component-type="PF6/Button"
                                data-ouia-safe="true"
                                id="copy-button-:r9:"
                                type="button"
                              >
                                <span
                                  class="pf-v6-c-button__icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v6-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    width="1em"
                                  >
                                    <svg
                                      class="pf-v6-icon-default"
                                      viewBox="0 0 448 512"
                                    >
                                      <path
                                        d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
                                      />
                                    </svg>
                                    <svg
                                      class="pf-v6-icon-rh-ui"
                                      viewBox="0 0 32 32"
                                    >
                                      <path
                                        d="M28 7v22.607c0 .768-.622 1.393-1.387 1.393H10a1 1 0 1 1 0-2h16V7a1 1 0 1 1 2 0Zm-6.5 19h-16c-.827 0-1.5-.673-1.5-1.5V8a1.001 1.001 0 0 1 .294-.708l5.998-5.998A1.001 1.001 0 0 1 11 1h10.5c.827 0 1.5.673 1.5 1.5v22c0 .827-.673 1.5-1.5 1.5ZM7.414 7H10V4.414L7.414 7ZM21 3h-9v4.614C12 8.378 11.378 9 10.613 9H6v15h15V3Z"
                                      />
                                    </svg>
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                        </div>
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-:rc:"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: 13 May 2022 07:42 UTC
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    subscription-manager
                  </span>
                </dt>
                <dd
                  aria-label="subscription-manager value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="subscription-manager value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-:rd:"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-:re:"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status: N/A
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-:rf:"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: N/A
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Satellite
                  </span>
                </dt>
                <dd
                  aria-label="Satellite value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Satellite value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-:rg:"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-:rh:"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status: N/A
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-:ri:"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: N/A
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Discovery
                  </span>
                </dt>
                <dd
                  aria-label="Discovery value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Discovery value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-:rj:"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-:rk:"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status: N/A
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-:rl:"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: N/A
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataCollectorsCard should render custom collectors 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="dataCollector-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r2h:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Data collectors
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Data collectors title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Data collectors title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    collector name
                  </span>
                </dt>
                <dd
                  aria-label="collector name value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="collector name value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-:r2i:"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-:r2j:"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status:
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-:r2k:"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        reporter id: 
                        <div
                          class="pf-v6-c-clipboard-copy pf-m-inline"
                          data-ouia-component-type="PF6/ClipboardCopy"
                          data-ouia-safe="true"
                        >
                          <span
                            class="pf-v6-c-clipboard-copy__text"
                            id="text-input-:r2l:"
                          >
                            1234567
                          </span>
                          <span
                            class="pf-v6-c-clipboard-copy__actions"
                          >
                            <span
                              class="pf-v6-c-clipboard-copy__actions-item"
                            >
                              <button
                                aria-label="Copy to clipboard"
                                class="pf-v6-c-button pf-m-plain pf-m-no-padding"
                                data-ouia-component-id="OUIA-Generated-Button-plain-:r2n:"
                                data-ouia-component-type="PF6/Button"
                                data-ouia-safe="true"
                                id="copy-button-:r2l:"
                                type="button"
                              >
                                <span
                                  class="pf-v6-c-button__icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v6-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    width="1em"
                                  >
                                    <svg
                                      class="pf-v6-icon-default"
                                      viewBox="0 0 448 512"
                                    >
                                      <path
                                        d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
                                      />
                                    </svg>
                                    <svg
                                      class="pf-v6-icon-rh-ui"
                                      viewBox="0 0 32 32"
                                    >
                                      <path
                                        d="M28 7v22.607c0 .768-.622 1.393-1.387 1.393H10a1 1 0 1 1 0-2h16V7a1 1 0 1 1 2 0Zm-6.5 19h-16c-.827 0-1.5-.673-1.5-1.5V8a1.001 1.001 0 0 1 .294-.708l5.998-5.998A1.001 1.001 0 0 1 11 1h10.5c.827 0 1.5.673 1.5 1.5v22c0 .827-.673 1.5-1.5 1.5ZM7.414 7H10V4.414L7.414 7ZM21 3h-9v4.614C12 8.378 11.378 9 10.613 9H6v15h15V3Z"
                                      />
                                    </svg>
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                        </div>
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-:r2o:"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: 01 Jan 2260 00:00 UTC
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
